add toggle theme functionality

--- a/src/theme/Footer/styles.module.css
+++ b/src/theme/Footer/styles.module.css
@@ -1,7 +1,7 @@
 .footer {
   display: flex;
   flex-direction: column;
-  background: var(--palette-rock);
+  /* background: var(--palette-rock); */
 }
 
 .footer--alt {
